@@ -8,10 +8,10 @@ Sources
 Releases
 {
 
-  v9r1p4
+  v9r1p5
   {
-    Modules = LHCbDIRAC:v9r1p4, LHCbWebDIRAC:v4r4p3
-    Depends = DIRAC:v6r19p12
+    Modules = LHCbDIRAC:v9r1p5, LHCbWebDIRAC:v4r4p3
+    Depends = DIRAC:v6r19p13
     LcgVer = v13r0
   }
 
